Small fixes and import changes.

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-addopts = --color=yes --cov=blueprint --cov-report=xml --cov-report=term -ram
+addopts = --color=yes --cov=blueprint --cov-report=xml --cov-report=term -ra
 filterwarnings =
 log_cli = 1
 log_cli_level = INFO
