Add path to coverage report for SonarCloud.

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,5 @@
 sonar.organization=martinheinz-github
 sonar.projectKey=MartinHeinz_python-project-blueprint
 
+sonar.python.coverage.reportPaths=coverage.xml
 sonar.sources=blueprint
